--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -66,7 +66,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
-        <div class="col-7 col-sm-5 address">
+        <div class="col-7 col-sm-5">
           <h5>Our Address</h5>
           <address>
             121, Clear Water Bay Road<br>
