--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -37,8 +37,11 @@
           <h1>Ristorante con Fusion</h1>
           <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
         </div>
-        <div class="col-12 col-sm align-self-center">
+        <div class="col-12 col-sm-3 align-self-center">
           <img src="img/logo.png" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-3 align-self-center">
+          <a class="btn btn-block btn-sm" href="#reserveform" style="background-color: #FDC02F;">Reserve Table</a>
         </div>
       </div>
     </div>
@@ -63,8 +66,13 @@
         <h3>This Month's Promotions</h3>
       </div>
       <div class="col col-sm col-md">
-        <h2>Weekend Grand Buffet</h2>
-        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+        <div class="media">
+          <div class="media-body">
+            <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+            <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+          </div>
+          <img src="img/buffet.png" alt="buffet" class="d-flex mr-3 img-thumbnail align-self-center" />
+        </div>
       </div>
     </div>
     <div class="row row-content align-items-center">
@@ -78,6 +86,62 @@
             <h2>Alberto Somayya</h2>
             <h4>Executive Chef</h4>
             <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row row-content align-items-center">
+      <div class="col-12 col-sm-8 offset-sm-2">
+        <div class="card">
+          <h3 class="card-header text-white" style="background-color: #FDC02F;">Reserve a Table</h3>
+          <div class="card-body">
+            <form id="reserveform">
+              <div class="form-group row">
+                <label class="col-md-2 col-form-label" for="guestNumber">Number of Guests</label>
+                <div class="col-md-10">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests1" value="1" />
+                    <label class="form-check-label" for="guests1">1</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests2" value="2" />
+                    <label class="form-check-label" for="guests2">2</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests3" value="3" />
+                    <label class="form-check-label" for="guests3">3</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests4" value="4" />
+                    <label class="form-check-label" for="guests4">4</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests5" value="5" />
+                    <label class="form-check-label" for="guests5">5</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="guestNumber" id="guests6" value="6" />
+                    <label class="form-check-label" for="guests6">6</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-12 col-md-2 col-form-label" for="date-input">Date and Time</label>
+                <div class="col-12 col-md-4">
+                  <input class="form-control" type="date" value="2021-01-25" id="date-input" />
+                </div>
+                <div class="col-12 col-md-4">
+                  <input class="form-control" type="time" value="13:45:00" id="example-time-input">
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 offset-md-2">
+                  <button class="btn btn-primary" type="submit">
+                    Reserve
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
