:art: Change explicit styling (yellowish color) for bootstrap bg-warning class

--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -41,7 +41,7 @@
           <img src="img/logo.png" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-3 align-self-center">
-          <a class="btn btn-block btn-sm" href="#reserveform" style="background-color: #FDC02F;">Reserve Table</a>
+          <a class="btn btn-block btn-sm bg-warning" href="#reserveform">Reserve Table</a>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
     <div class="row row-content align-items-center">
       <div class="col-12 col-sm-8 offset-sm-2">
         <div class="card">
-          <h3 class="card-header text-white" style="background-color: #FDC02F;">Reserve a Table</h3>
+          <h3 class="card-header text-white bg-warning">Reserve a Table</h3>
           <div class="card-body">
             <form id="reserveform">
               <div class="form-group row">
