--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -71,6 +71,81 @@
       </div>
     </div>
   </div>
+  <div id="reserveModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Reserve a Table</h4>
+          <button type="button" class="close" data-dismiss="modal">
+            &times;
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="reserveform">
+            <div class="form-group row">
+              <label class="col-md-2 col-form-label" for="guestNumber">Number of Guests</label>
+              <div class="col-md-10">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests1" value="1" />
+                  <label class="form-check-label" for="guests1">1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests2" value="2" />
+                  <label class="form-check-label" for="guests2">2</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests3" value="3" />
+                  <label class="form-check-label" for="guests3">3</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests4" value="4" />
+                  <label class="form-check-label" for="guests4">4</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests5" value="5" />
+                  <label class="form-check-label" for="guests5">5</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="guestNumber" id="guests6" value="6" />
+                  <label class="form-check-label" for="guests6">6</label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-2 col-form-label" for="guestNumber">Section</label>
+              <div class="col-md-10">
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-success active">
+                    <input type="radio" name="section" id="section1" value="Non-Smoking" autocomplete="off" checked> Non-Smoking
+                  </label>
+                  <label class="btn btn-danger">
+                    <input type="radio" name="section" id="section2" value="Smoking" autocomplete="off"> Smoking
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-12 col-md-2 col-form-label" for="date-input">Date and Time</label>
+              <div class="col-12 col-md-4">
+                <input class="form-control" type="date" value="2021-01-25" id="date-input" />
+              </div>
+              <div class="col-12 col-md-4">
+                <input class="form-control" type="time" value="13:45:00" id="example-time-input">
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="col-12 offset-md-2">
+                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-primary" type="submit">
+                  Reserve
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <header class="jumbotron">
     <div class="container">
       <div class="row row-header">
@@ -83,9 +158,7 @@
         </div>
         <div class="col-12 col-sm-3 align-self-center">
           <a class="btn btn-block btn-sm nav-link btn-warning" type="button"
-              data-toggle="tooltip" data-html="true"
-              title="Or Call us at <br><strong>+852 12345678</strong>"
-              data-placement="bottom" href="#reserveform">Reserve Table</a>
+              data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
         </div>
       </div>
     </div>
@@ -175,62 +248,6 @@
         </div>
       </div>
     </div>
-    <div class="row row-content align-items-center">
-      <div class="col-12 col-sm-8 offset-sm-2">
-        <div class="card">
-          <h3 class="card-header text-white bg-warning">Reserve a Table</h3>
-          <div class="card-body">
-            <form id="reserveform">
-              <div class="form-group row">
-                <label class="col-md-2 col-form-label" for="guestNumber">Number of Guests</label>
-                <div class="col-md-10">
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests1" value="1" />
-                    <label class="form-check-label" for="guests1">1</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests2" value="2" />
-                    <label class="form-check-label" for="guests2">2</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests3" value="3" />
-                    <label class="form-check-label" for="guests3">3</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests4" value="4" />
-                    <label class="form-check-label" for="guests4">4</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests5" value="5" />
-                    <label class="form-check-label" for="guests5">5</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="guestNumber" id="guests6" value="6" />
-                    <label class="form-check-label" for="guests6">6</label>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-12 col-md-2 col-form-label" for="date-input">Date and Time</label>
-                <div class="col-12 col-md-4">
-                  <input class="form-control" type="date" value="2021-01-25" id="date-input" />
-                </div>
-                <div class="col-12 col-md-4">
-                  <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-12 offset-md-2">
-                  <button class="btn btn-primary" type="submit">
-                    Reserve
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <footer class="footer">
     <div class="container">
@@ -277,10 +294,5 @@
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script>
-    $(() => {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-  </script>
 </body>
 </html>
