:boom: Fourth assignment done

--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -28,9 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
-            <span class="fa fa-sign-in"></span> Login
-          </a>
+          <a id="loginButton"><span class="fa fa-sign-in"></span> Login</a>
         </span>
       </div>
     </div>
@@ -157,8 +155,7 @@
           <img src="img/logo.png" class="img-fluid" />
         </div>
         <div class="col-12 col-sm-3 align-self-center">
-          <a class="btn btn-block btn-sm nav-link btn-warning" type="button"
-              data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+          <a class="btn btn-block btn-sm nav-link btn-warning" type="button" id="reserveButton">Reserve Table</a>
         </div>
       </div>
     </div>
@@ -299,6 +296,14 @@
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script>
     $(document).ready(() => {
+      // Modal triggers
+      $('#loginButton').click(() => {
+        $('#loginModal').modal('show');
+      });
+      $('#reserveButton').click(() => {
+        $('#reserveModal').modal('show');
+      });
+
       $('#mycarousel').carousel({
         interval: 2000
       });
